Test added one text under constructor.
Test added one text under constructor.

--- a/DevHDRREZA1_01202019/src/classes/A.cls
+++ b/DevHDRREZA1_01202019/src/classes/A.cls
@@ -3,6 +3,7 @@ public A(TestCustomt_Settings controller) {
     } 
     
     public A() {
+        //Hello HRZ 01202019
     }
     
      public String getGo(){
