Updated Comment line under Constructor.
Updated Comment line under Constructor.

--- a/DevHDRREZA1_01202019/src/classes/A.cls
+++ b/DevHDRREZA1_01202019/src/classes/A.cls
@@ -3,7 +3,7 @@ public A(TestCustomt_Settings controller) {
     } 
     
     public A() {
-        //Hello HRZ 01202019
+        //Hello HRZ 01202019- Test line ***
     }
     
      public String getGo(){
